--- a/views/index.ejs
+++ b/views/index.ejs
@@ -40,7 +40,7 @@
     Templates[div.id] = Handlebars.compile(div.innerHTML);
   });
 </script>
-<script src='production.min.js'></script>
+<script src='/public/dist/production.min.js'></script>
 
 <!--
 <script src='/client/app.js'></script>
